--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "expo": "~38.0.8",
+    "expo": "~38.0.10",
     "expo-cli": "^3.27.4",
     "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-map-link": "^2.7.17",
+    "react-native-maps": "0.27.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.12",
+    "firebase": "7.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "^7.11.6",
+    "babel-preset-expo": "~8.2.3"
   },
   "private": true
 }
