--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "expo": "~38.0.10",
     "expo-cli": "^3.27.4",
     "expo-status-bar": "^1.0.2",
     "express": "^4.17.1",
+    "firebase": "7.9.0",
     "morgan": "^1.10.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
@@ -25,8 +27,7 @@
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12",
-    "firebase": "7.9.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
