--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
@@ -21,7 +22,8 @@
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-dev-menu": "^4.0.2",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-map-link": "^2.7.17",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
