--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-permissions": "~9.0.1",
+    "expo-location": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
