--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.19.0",
     "expo": "~38.0.10",
     "expo-cli": "^3.27.4",
+    "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "express": "^4.17.1",
     "firebase": "7.20.0",
@@ -23,14 +25,13 @@
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-dev-menu": "^4.0.2",
+    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-map-link": "^2.7.17",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.11.0",
-    "react-native-web": "~0.13.12",
-    "expo-permissions": "~9.0.1",
-    "expo-location": "~8.2.1"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
