--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "express": "^4.17.1",
-    "firebase": "7.20.0",
+    "firebase": "^7.21.0",
     "morgan": "^1.10.0",
+    "native-base": "^2.13.14",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
