--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-native-dev-menu": "^4.0.2",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-map-link": "^2.7.17",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-linear-gradient": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
