--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.19.0",
     "expo": "~38.0.10",
     "expo-cli": "^3.27.4",
+    "expo-google-app-auth": "^8.1.2",
+    "expo-linear-gradient": "~8.2.1",
     "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
@@ -34,8 +36,7 @@
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.11.0",
-    "react-native-web": "~0.13.12",
-    "expo-linear-gradient": "~8.2.1"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
